[metadata]
name = luma.oled
version = attr: luma.oled.__version__
description = A small library to drive an OLED device with either SSD1306, SSD1309, SSD1322, SSD1325, SSD1327, SSD1331, SSD1351, SSD1362, SH1106 or WS0010 chipset
long_description = file: README.rst, CONTRIBUTING.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = raspberry pi, rpi, oled, display, screen, rgb, monochrome, greyscale, color, ssd1306, ssd1309, ssd1322, ssd1325, ssd1327, ssd1331, ssd1351, sh1106, ws0010, WEH001602A, WEG010016A, spi, i2c, parallel6800, pcf8574
author = Richard Hull
author_email = richard.hull@destructuring-bind.org
url = https://github.com/rm-hull/luma.oled
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.7, <4
install_requires =
    luma.core>=2.4.0
tests_require =
    pytest
    pytest-cov
    pytest-timeout

[options.packages.find]
include = luma*

[options.extras_require]
docs = sphinx>=1.5.1
qa =
    flake8
    rstcheck
test =
    pytest
    pytest-cov
    pytest-timeout

[bdist_wheel]
universal = 1

[flake8]
ignore = E127, E128, E241, E402, E501, E731
exclude =
    .AppleDouble,
    .ropeproject,
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist

[aliases]
test=pytest
